--- a/app/assets/index.tpl.html
+++ b/app/assets/index.tpl.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>React Redux React-Router with Webpack Boilerplate</title>
-    <meta name="description" content="React Redux React-Router with Webpack Boilerplate">
+    <title>React Dashboard</title>
+    <meta name="description" content="React Dashboard">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
